--- a/Emzi0767.OwoDotNet/Emzi0767.OwoDotNet.csproj
+++ b/Emzi0767.OwoDotNet/Emzi0767.OwoDotNet.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net45;net46;net47;netstandard1.1;netstandard1.3;netstandard1.6;netstandard2.0</TargetFrameworks>
-    <PackageId>.NET Core client for whats-th.is</PackageId>
+    <PackageId>Emzi0767.OwoDotNet</PackageId>
     <Authors>Emzi0767</Authors>
     <Company>Emzi0767</Company>
     <Description>.NET Standard library for whats-th.is</Description>
