Disable .NET Core 2.0 build for CI.

--- a/Emzi0767.OwoDotNet.Cli/Emzi0767.OwoDotNet.Cli.csproj
+++ b/Emzi0767.OwoDotNet.Cli/Emzi0767.OwoDotNet.Cli.csproj
@@ -17,7 +17,12 @@
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+  <PropertyGroup Condition="'$(Configuration)'=='Release' And '$(VersionSuffix)' != ''">
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release' And '$(VersionSuffix)' == ''">
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp1.1;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
