--- a/Emzi0767.OwoDotNet.Tests/Emzi0767.OwoDotNet.Tests.csproj
+++ b/Emzi0767.OwoDotNet.Tests/Emzi0767.OwoDotNet.Tests.csproj
@@ -6,6 +6,18 @@
     <TestProjectType>UnitTest</TestProjectType>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(VersionSuffix)' != ''">
+    <Version>1.0.0-git-$(VersionSuffix)</Version>
+    <AssemblyVersion>1.0.0.$(VersionSuffix)</AssemblyVersion>
+    <FileVersion>1.0.0.$(VersionSuffix)</FileVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(VersionSuffix)' == ''">
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
