Always copy the test image.

--- a/Emzi0767.OwoDotNet.Tests/Emzi0767.OwoDotNet.Tests.csproj
+++ b/Emzi0767.OwoDotNet.Tests/Emzi0767.OwoDotNet.Tests.csproj
@@ -27,4 +27,10 @@
     <ProjectReference Include="..\Emzi0767.OwoDotNet\Emzi0767.OwoDotNet.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="testimg.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
