Fixed extensions disappearing. Updated versions to 1.1.

--- a/Emzi0767.OwoDotNet.Cli/Emzi0767.OwoDotNet.Cli.csproj
+++ b/Emzi0767.OwoDotNet.Cli/Emzi0767.OwoDotNet.Cli.csproj
@@ -6,15 +6,15 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(VersionSuffix)' != ''">
-    <Version>1.0.0-git-$(VersionSuffix)</Version>
-    <AssemblyVersion>1.0.0.$(VersionSuffix)</AssemblyVersion>
-    <FileVersion>1.0.0.$(VersionSuffix)</FileVersion>
+    <Version>1.1.0-git-$(VersionSuffix)</Version>
+    <AssemblyVersion>1.1.0.$(VersionSuffix)</AssemblyVersion>
+    <FileVersion>1.1.0.$(VersionSuffix)</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(VersionSuffix)' == ''">
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <Version>1.1.0</Version>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Release' And '$(VersionSuffix)' != ''">
@@ -33,6 +33,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Emzi0767.OwoDotNet\Emzi0767.OwoDotNet.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
